fix(gtk): fix alignment issues with nautilus sidebar

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -4190,16 +4190,11 @@ placessidebar {
       border-radius: 0; }
       placessidebar row.sidebar-row label {
         color: #98abb2;
-        padding-left: 8px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebar-icon {
-        margin-left: -14px;
-        margin-right: 12px;
-        padding-left: 14px;
-        padding-right: 12px;
+        padding-left: 30px; }
+      placessidebar row.sidebar-row.sidebar-row .sidebarrow-icon {
         color: #98abb2; }
       placessidebar row.sidebar-row:hover {
         transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        color: rgba(0, 0, 0, 0.76);
         background-color: transparent;
         /*rgba(65,67,75,0.4); */
         background-image: linear-gradient(to right, #1b232d 40px, #2b2d35 40px, #2b2d35 97%); }
@@ -4214,7 +4209,7 @@ placessidebar {
           background-image: linear-gradient(to right, rgba(0, 114, 255, 0.6) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
           placessidebar row.sidebar-row:selected:backdrop label {
             color: rgba(0, 114, 255, 0.6); }
-        placessidebar row.sidebar-row:selected .sidebar-icon {
+        placessidebar row.sidebar-row:selected .sidebarrow-icon {
           -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
           color: inherit; }
       placessidebar row.sidebar-row.sidebar-new-bookmark-row, placessidebar row.sidebar-row.sidebar-new-bookmark-row label, placessidebar row.sidebar-row.sidebar-new-bookmark-row .sidebar-icon {
